engine-net-2/examples/Errors/FilterLambdaExpressionErrorCompiled.grs
new graph "FilterLambdaExpressionErrorCompiled.grg"

quit
